--- a/SongSong/WinAPI/Note/LV03. Static Library.md
+++ b/SongSong/WinAPI/Note/LV03. Static Library.md
@@ -17,7 +17,7 @@
 ### 라이브러리 종류
 - 동적 라이브러리 : 완성된 프로그램을 실행할 때(런타임에서), 포함시키는 동적 라이브러리 (.dll)
 - 정적 라이브러리 : 프로그램 컴파일 과정에서 포함시키는 오브젝트 파일들의 모임(.lib)
-- ![alt text](image.png)
+![alt text](imgs/libss.png)
 
 
 ### 정적 라이브러리
